--- a/App.config
+++ b/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <connectionStrings>
+        <add name="APPESTUDIANTES1" connectionString="Server=localhost;Port=3306;Database=appestudiantes;Uid=root;Pwd='';charset=utf8;SslMode=none" providerName="MySql.Data.MySqlClient"/>
+        <add name="APPESTUDIANTES2" providerName="System.Data.SqlClient" connectionString="Data Source=ETOROB\APPESTUDIANTES;Database=appestudiantes;Integrated Security=True;"/>
+    </connectionStrings>
 </configuration>
